--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,20 @@
 ---
 - name: Create Credentials
+  when: eda_controller_config_credentials is defined
   ansible.builtin.include_tasks: create_credential.yml
   loop: "{{ eda_controller_config_credentials }}"
 
 - name: Create Decision Environment
+  when: eda_controller_config_decision_envs is defined
   ansible.builtin.include_tasks: create_decision_env.yml
   loop: "{{ eda_controller_config_decision_envs }}"
 
 - name: Create Project
+  when: eda_controller_config_projects is defined
   ansible.builtin.include_tasks: create_project.yml
   loop: "{{ eda_controller_config_projects }}"
 
 - name: Create Rulebook Activation
+  when: eda_controller_config_rulebook_activations is defined
   ansible.builtin.include_tasks: create_rulebook_activation.yml
   loop: "{{ eda_controller_config_rulebook_activations }}"
