--- a/tasks/create_credential.yml
+++ b/tasks/create_credential.yml
@@ -1,6 +1,8 @@
 ---
 - name: Find credential id
   ansible.builtin.include_tasks: list_credential.yml
+  vars:
+    credential_name: "{{ item.name }}"
 
 - name: Create EDA Project
   when: _credential_id | length == 0
