--- a/tasks/list_credential.yml
+++ b/tasks/list_credential.yml
@@ -18,10 +18,10 @@
 
 - name: Find Activation ID
   vars:
-    _query: '[?name == `{{ item.name }}`].id'
+    _query: '[?name == `{{ credential_name }}`].id'
   ansible.builtin.set_fact:
     _credential_id: "{{ _r_list_credential.json.results | json_query(_query) | join }}"
 
-- name: "Activation ID [{{ item.credential }}] "
+- name: "Activation ID [{{ credential_name }}] "
   ansible.builtin.debug:
     msg: "{{ _credential_id }}"
