--- a/tasks/list_project.yml
+++ b/tasks/list_project.yml
@@ -18,10 +18,10 @@
 
 - name: Find Project ID
   vars:
-    _query: '[?name == `{{ item.project }}`].id'
+    _query: '[?name == `{{ project_name }}`].id'
   ansible.builtin.set_fact:
     _project_id: "{{ _r_list_project.json.results | json_query(_query) | join }}"
 
-- name: "Project ID [{{ item.project }}]"
+- name: "Project ID [{{ project_name }}]"
   ansible.builtin.debug:
     msg: "{{ _project_id }}"
