--- a/tasks/create_rulebook_activation.yml
+++ b/tasks/create_rulebook_activation.yml
@@ -2,12 +2,12 @@
 - name: Find decision_env id
   ansible.builtin.include_tasks: list_decision_env.yml
   vars:
-    decision_env_name: "{{ item.name }}"
+    decision_env_name: "{{ item.decision_env }}"
 
 - name: Find project id
   ansible.builtin.include_tasks: list_project.yml
   vars:
-    project_name: "{{ item.name }}"
+    project_name: "{{ item.project }}"
 
 - name: Find rulebook id
   ansible.builtin.include_tasks: list_rulebook.yml
@@ -25,7 +25,7 @@
     - _project_id | length > 0
     - _rulebook_id | length > 0
     - _decision_env_id | length > 0
-  ansible.builtin.uri:
+  ansible.builtin.uri: 
     url: "{{ eda_controller_config_url }}/api/eda/v1/activations/"
     user: "{{ eda_controller_config_username }}"
     password: "{{ eda_controller_config_password }}"
