--- a/tasks/create/create_credential.yml
+++ b/tasks/create/create_credential.yml
@@ -1,10 +1,10 @@
 ---
 - name: Find credential id
-  ansible.builtin.include_tasks: list_credential.yml
+  ansible.builtin.include_tasks: list/list_credential.yml
   vars:
     credential_name: "{{ item.name }}"
 
-- name: Create EDA Project
+- name: Create EDA Credential
   when: _credential_id | length == 0
   ansible.builtin.uri:
     url: "{{ eda_controller_config_url }}/api/eda/v1/credentials/"
