--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,45 +1,72 @@
 ---
+# --------------------------------------------------------
+# EDA Controller URL, Username and Password
+# --------------------------------------------------------
+# eda_controller_config_url: [required https://example.com]
+# eda_controller_config_username: [required]
+# eda_controller_config_password: [required]
 
-eda_controller_config_url: <CHANGEME>
-eda_controller_config_username: <CHANGEME>
-eda_controller_config_password: <CHANGEME>
+# --------------------------------------------------------
+# List of AWX Tokens to be created if defined
+# --------------------------------------------------------
+# eda_controller_config_awx_tokens:
+#   - name: [required]
+#     token: [required]
+#     description: [optional]
 
+# --------------------------------------------------------
+# List of EDA credentials to be created if defined
+# --------------------------------------------------------
 # eda_controller_config_credentials:
-#   - name:
-#     description:
-#     username:
-#     token:
-#     credential_type:
+#   - name: [required]
+#     description: [optional]
+#     username: [required]
+#     token: [required]
+#     credential_type: [required options
+                        # "GitHub Personal Access Token" or
+                        # "GitLab Personal Access Token" or
+                        # "Container registry" 
+                        # ]
 
+# --------------------------------------------------------
+# List of Decision Environments to be created if defined
+# --------------------------------------------------------
 eda_controller_config_decision_envs:
   - name: "de-for-ocp"
-    description: "Decision Environment for OpenShift"
     image_url: "quay.io/mitsharm/eda/de-for-ocp"
+    # description: [optional "Decision Environment for OpenShift"]
+    # credential: [optional]
 
+# --------------------------------------------------------
+# List of Projects to be created if defined
+# --------------------------------------------------------
 eda_controller_config_projects:
   - name: "OpenShift events"
-    description: "Event-driven Ansible rulebooks"
     repo_url: "https://github.com/miteshget/eda-test.git"
+    # description: [optional "Event-driven Ansible rulebooks"]
+    # credential: [optional]
 
+# --------------------------------------------------------
+# List of Rulebook Activations to be created if defined
+# --------------------------------------------------------
 eda_controller_config_rulebook_activations:
   - name: "Patch Route"
-    description: "Patch OpenShift Routes"
     project: "OpenShift events"
     rulebook: "patch_route.yml"
     decision_env: "de-for-ocp"
-    restart_policy: "always"
-    enabled: true
+    # restart_policy: [optional default="always"]
+    # description: [optional "Patch OpenShift Routes"]
+    # enabled: [optional Default=true]
   - name: "Resource Quota Set"
-    description: "Set Resource Quota on OpenShift namespace"
     project: "OpenShift events"
     rulebook: "resource_quota.yml"
     decision_env: "de-for-ocp"
     restart_policy: "always"
-    enabled: true
+    # restart_policy: [optional default="always"]
+    # enabled: [optional Default=true]
   - name: "Create Volume Snapshot"
-    description: "Create PVC volume snapshot"
     project: "OpenShift events"
     rulebook: "volume_snapshot.yml"
     decision_env: "de-for-ocp"
-    restart_policy: "always"
-    enabled: true
+    # restart_policy: [optional default="always"]
+    # enabled: [optional Default=true]
