--- a/tasks/create/create_awx_token.yml
+++ b/tasks/create/create_awx_token.yml
@@ -1,13 +1,13 @@
 ---
-- name: Find project id
-  ansible.builtin.include_tasks: list_project.yml
+- name: Find credential id
+  ansible.builtin.include_tasks: list/list_awx_token.yml
   vars:
-    project_name: "{{ item.name }}"
+    credential_name: "{{ item.name }}"
 
-- name: Create EDA Project
-  when: _project_id | length == 0
+- name: Create EDA AWX Token
+  when: _credential_id | length == 0
   ansible.builtin.uri:
-    url: "{{ eda_controller_config_url }}/api/eda/v1/projects/"
+    url: "{{ eda_controller_config_url }}/api/eda/v1/users/me/awx-tokens/"
     user: "{{ eda_controller_config_username }}"
     password: "{{ eda_controller_config_password }}"
     method: POST
@@ -19,5 +19,5 @@
       {
         "name": "{{ item.name }}",
         "description": "{{ item.description | default(item.name) }}",
-        "url": "{{ item.repo_url }}"
+        "token": "{{ item.token }}"
       }
