--- a/tasks/create/create_awx_token.yml
+++ b/tasks/create/create_awx_token.yml
@@ -5,7 +5,7 @@
     awx_token_name: "{{ item.name }}"
 
 - name: Create EDA AWX Token
-  when: _credential_id | length == 0
+  when: _token_id | length == 0
   ansible.builtin.uri:
     url: "{{ eda_controller_config_url }}/api/eda/v1/users/me/awx-tokens/"
     user: "{{ eda_controller_config_username }}"
