--- a/tasks/create/create_credential.yml
+++ b/tasks/create/create_credential.yml
@@ -20,6 +20,6 @@
         "name": "{{ item.name }}",
         "description": "{{ item.description | default(item.name) }}",
         "username": "{{ item.username }}",
-        "secret"" "{{ item.token }}",
+        "secret": "{{ item.token }}",
         "credential_type: "{{ item.credential_type }}"
       }
