--- a/tasks/create/create_credential.yml
+++ b/tasks/create/create_credential.yml
@@ -21,5 +21,5 @@
         "description": "{{ item.description | default(item.name) }}",
         "username": "{{ item.username }}",
         "secret": "{{ item.token }}",
-        "credential_type: "{{ item.credential_type }}"
+        "credential_type": "{{ item.credential_type }}"
       }
