--- a/tasks/list/list_credential.yml
+++ b/tasks/list/list_credential.yml
@@ -1,5 +1,5 @@
 ---
-- name: List Credentials
+- name: "[{{ used_for | d('') }}] Fetch Credentials"
   ansible.builtin.uri:
     url: "{{ eda_controller_config_url }}/api/eda/v1/credentials/"
     user: "{{ eda_controller_config_username }}"
