--- a/tasks/create/create_credential.yml
+++ b/tasks/create/create_credential.yml
@@ -1,4 +1,8 @@
 ---
+- name: Set up display
+  set_fact:
+    used_for: "Credential"
+
 - name: Find credential id
   ansible.builtin.include_tasks: list/list_credential.yml
   vars:
