--- a/tasks/list/list_activation.yml
+++ b/tasks/list/list_activation.yml
@@ -1,5 +1,5 @@
 ---
-- name: List Activations
+- name: "[{{ used_for | d('') }}] Fetch Activations"
   ansible.builtin.uri:
     url: "{{ eda_controller_config_url }}/api/eda/v1/activations/"
     user: "{{ eda_controller_config_username }}"
