--- a/tasks/list/list_credential.yml
+++ b/tasks/list/list_credential.yml
@@ -11,7 +11,7 @@
     status_code: 200
   register: _r_list_credential
 
-- name: List Credentials
+- name: "[{{ used_for | d('') }}] List Credentials"
   ansible.builtin.debug:
     msg: "{{ _r_list_credential }}"
     verbosity: 2
@@ -22,6 +22,6 @@
   ansible.builtin.set_fact:
     _credential_id: "{{ _r_list_credential.json.results | json_query(_query) | join }}"
 
-- name: "Activation ID [{{ credential_name }}] "
+- name: "[{{ used_for | d('') }}] Activation ID"
   ansible.builtin.debug:
     msg: "{{ _credential_id }}"
