--- a/tasks/list/list_activation.yml
+++ b/tasks/list/list_activation.yml
@@ -16,12 +16,12 @@
     msg: "{{ _r_list_activation }}"
     verbosity: 2
 
-- name: Find Activation ID
+- name: "[{{ used_for | d('') }}] Find Activation ID"
   vars:
     _query: '[?name == `{{ rulebook_activation_name }}`].id'
   ansible.builtin.set_fact:
     _activation_id: "{{ _r_list_activation.json.results | json_query(_query) | join }}"
 
-- name: "Activation ID [{{ rulebook_activation_name }}] "
+- name: "[{{ used_for | d('') }}] Activation ID"
   ansible.builtin.debug:
     msg: "{{ _activation_id }}"
